mining.css
#Operator{
    position: absolute;
    top: 24%;
    left: 40%;
    width: 20%;
    height: 40%;
    cursor: pointer;
}
#Operhand{
    position: absolute;
    top: 24%;
    left: 40%;
    width: 20%;
    height: 40%;
    z-index: 2;
    cursor: pointer;
}
#Boat{
    position: absolute;
    top: 5%;
    left: 10%;
    width: 80%;
    height: 80%;
    z-index: 1;
    pointer-events: none;
}
#Crank{
    position: absolute;
    top: 35%;
    left: 35.5%;
    width: 1.5%;
    height: 2.5%;
    z-index: 2;
    cursor: pointer;
}
#Waves{
    position: absolute;
    bottom: 20%;
    left: -1%;
    width: 101%;
    height: 28%;
    z-index: 3;
    pointer-events: none;
}
#Pier{
    position: absolute;
    bottom: 0%;
    left: 20%;
    width: 60%;
    height: 50%;
    z-index: 4;
    pointer-events: none;
}

.Water{
    position: absolute;
    left: -1%;
    width: 101%;
    background-color: #306d58;
    z-index: 2;
    pointer-events: none;
}
#Water1{
    height: 20%;
    display: block;
    bottom: 0;
}
#Water2{
    height: 20%;
    display: block;
    bottom: 0;
}
#Water3{
    height: 35%;
    display: none;
    bottom: 0;
}
#Water4{
    height: 50%;
    display: none;
    bottom: 0;
}

#Drill{
    position: absolute;
    height: 50%;
    width: 30%;
    top: -60%;
    left: 50%;
    z-index: 4;
    display: none;
}
#Cord{
    position: absolute;
    height: 50%;
    width: 30%;
    top: -60%;
    left: 50%;
    z-index: 3;
    display: none;
}


/*A Map that covers the screen as you pick where to go. The Bike will move to and fro as you decide, ala Pikmin.*/
#Map{
    position: absolute;
    width: 12%;
    left: 20%;
    top: 65%;
    z-index: 5;
    cursor: pointer;
}
#WhereGo{
    position: absolute;
    width: 99%;
    height: 99%;
    display: none;
    z-index: 20;
}
#CancelMap{
    position: absolute;
    width: 5%;
    right: 2%;
    top: 2%;
    display: none;
    z-index: 23;
    cursor: pointer;
}
#BikeMap{
    position: absolute;
    left: 40%;
    top: 70%;
    width: 10%;
    display: none;
    z-index: 22;
    pointer-events: none;
}
.Mappy{
    position: absolute;
    width: 10%;
    display: none;
    z-index: 21;
    cursor: pointer;
}
#HomeMap{
    left: 40%;
    top: 80%;
}
#LocustMap{
    left: 10%;
    top: 8%;
}
#TigerMap{
    left: 80%;
    top: 15%;
}
#MushroomMap{
    left: 80%;
    top: 70%;
}
#AppraisalMap{
    left: 45%;
    top: 45%;
}
#MinesMap{
    left: 5%;
    top: 75%;
}

